--- a/client/src/Pages/Public/Public.module.css
+++ b/client/src/Pages/Public/Public.module.css
@@ -20,6 +20,8 @@
     height: 100vh;
     min-width: 320px; /* Example minimum width */
     min-height: 500px; /* Example minimum height */
+    position:absolute;
+    left:300px;
 }
 
 .cards {
