--- a/client/src/Pages/Public/Public.module.css
+++ b/client/src/Pages/Public/Public.module.css
@@ -22,6 +22,7 @@
     min-width: 320px; /* Example minimum width */
     min-height: 500px; /* Example minimum height */
     margin-left:350px;
+    margin-top:100px;
 }
 
 .cards {
