--- a/client/src/Pages/Public/Public.module.css
+++ b/client/src/Pages/Public/Public.module.css
@@ -7,6 +7,7 @@
     text-align: left;
     position:absolute;
     left:0px;
+    top:0px;
     display: flex;
     align-items: center;
     /* justify-content: center; */
