--- a/client/src/Pages/Public/Public.module.css
+++ b/client/src/Pages/Public/Public.module.css
@@ -22,8 +22,10 @@
     height: 100vh;
     min-width: 320px; /* Example minimum width */
     min-height: 500px; /* Example minimum height */
-    margin-left:350px;
+    margin-left:450px;
     margin-top:350px;
+    border: 2px solid #EDF5FE;
+    
 }
 
 .cards {
