--- a/client/src/Pages/Public/Public.module.css
+++ b/client/src/Pages/Public/Public.module.css
@@ -18,8 +18,8 @@
     width: 96vw;
 }
 .public {
-    width: 100vw;
-    height: 100vh;
+    width: 700px;
+    height: 700px;
     min-width: 320px; /* Example minimum width */
     min-height: 500px; /* Example minimum height */
     margin-left:450px;
