--- a/client/src/Pages/Public/Public.module.css
+++ b/client/src/Pages/Public/Public.module.css
@@ -18,9 +18,9 @@
     width: 96vw;
 }
 .public {
-    width: 700px;
-    height: 700px;
-
+    width: 1000px;
+    height: 400px;
+    padding:30px;
     margin-left:450px;
     margin-top:250px;
     border: 2px solid #EDF5FE;    
